--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nium Portfolio</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://nium-portfolio.vercel.app/">
+    <meta property="og:title" content="Nium Portfolio - Anh Tran">
+    <meta property="og:description"
+        content="Competitive Programmer | Informatics Specialist | Student at Gia Dinh High School">
+    <meta property="og:image" content="redgirl.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://nium-portfolio.vercel.app/">
+    <meta property="twitter:title" content="Nium Portfolio - Anh Tran">
+    <meta property="twitter:description"
+        content="Competitive Programmer | Informatics Specialist | Student at Gia Dinh High School">
+    <meta property="twitter:image" content="redgirl.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap"
