--- a/index.html
+++ b/index.html
@@ -1788,11 +1788,11 @@
                 <div class="contact-grid">
                     <div class="contact-item">
                         <div class="contact-label"><i class="fas fa-envelope"></i> Email</div>
-                        <div class="contact-value">Tranvanducanh08112008@gmail.com</div>
+                        <div class="contact-value"></div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-label"><i class="fas fa-phone"></i> Phone</div>
-                        <div class="contact-value">0328 043 732</div>
+                        <div class="contact-value"></div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-label"><i class="fab fa-discord"></i> Discord</div>
