--- a/index.html
+++ b/index.html
@@ -341,10 +341,97 @@
             height: 200px;
             border-radius: 50%;
             margin: 0 auto 40px;
-            border: 5px solid #0099cc;
-            box-shadow: 0 0 35px rgba(0, 153, 204, 0.8), 0 0 70px rgba(0, 153, 204, 0.4), 0 0 0 4px rgba(0, 153, 204, 0.1);
+            position: relative;
+            z-index: 10;
+            padding: 5px;
+            background: rgba(0, 0, 0, 0.5);
+            /* Pulse Glow */
+            box-shadow: 0 0 50px rgba(255, 0, 85, 0.4);
+            transition: transform 0.5s cubic-bezier(0.34, 1.56, 0.64, 1), box-shadow 0.5s ease;
+            animation: float 6s ease-in-out infinite;
+        }
+
+        /* Interaction */
+        .hero-avatar:hover {
+            transform: scale(1.1) rotate(5deg);
+            box-shadow: 0 0 80px rgba(255, 0, 85, 0.8), 0 0 120px rgba(255, 0, 85, 0.4);
+        }
+
+        /* Ring 1: The Core (Clockwise) */
+        .hero-avatar::before {
+            content: '';
+            position: absolute;
+            inset: -4px;
+            border-radius: 50%;
+            /* Crimson, Pink, White mix */
+            background: conic-gradient(from 0deg, transparent 0deg, #ff0055 100deg, #ffffff 180deg, #ff0055 260deg, transparent 360deg);
+            z-index: -1;
+            box-shadow: 0 0 20px rgba(255, 0, 85, 0.5);
+            animation: spin 8s linear infinite;
+            transition: animation-duration 0.5s ease;
+        }
+
+        /* Ring 2: The Containment Field (Counter-Clockwise) */
+        .hero-avatar::after {
+            content: '';
+            position: absolute;
+            inset: -12px;
+            /* Larger ring */
+            border-radius: 50%;
+            border: 2px dashed rgba(255, 0, 85, 0.4);
+            /* Dashed tech look */
+            /* Mask center so it's just a ring */
+            -webkit-mask-image: radial-gradient(transparent 65%, black 66%);
+            mask-image: radial-gradient(transparent 65%, black 66%);
+            z-index: -2;
+            animation: spin 12s linear infinite reverse;
+            opacity: 0.8;
+            transition: animation-duration 0.5s ease, border-color 0.5s ease;
+        }
+
+        /* Adjust for masked ring not showing border correctly with mask? 
+           Actually, border on pseudo-element works, but mask hides inside.
+           Let's use a Conic Gradient for the second ring too, distinct style. */
+        .hero-avatar::after {
+            content: '';
+            position: absolute;
+            inset: -10px;
+            border-radius: 50%;
+            /* Tech segments: Red -> Transparent -> Red */
+            background: conic-gradient(from 180deg, transparent 0%, rgba(255, 0, 85, 0.8) 10%, transparent 20%, transparent 50%, rgba(255, 0, 85, 0.8) 60%, transparent 70%);
+            z-index: -2;
+            animation: spin 15s linear infinite reverse;
+        }
+
+        .hero-avatar:hover::before {
+            animation-duration: 2s;
+            /* Super speed */
+        }
+
+        .hero-avatar:hover::after {
+            animation-duration: 4s;
+            /* Super speed reverse */
+            opacity: 1;
+        }
+
+        /* Ensure the image sits on top */
+        .hero-avatar img {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
             object-fit: cover;
-            animation: scaleIn 0.8s cubic-bezier(0.34, 1.56, 0.64, 1), float 6s ease-in-out 2s infinite;
+            position: relative;
+            z-index: 2;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
         }
 
         .slide-hero h1 {
@@ -1836,7 +1923,9 @@
         <!-- Slide 1: Hero -->
         <div class="slide slide-hero active">
             <div class="content">
-                <img src="redgirl.jpg" alt="Profile" class="hero-avatar">
+                <div class="hero-avatar">
+                    <img src="redgirl.jpg" alt="Profile">
+                </div>
                 <h1 class="text-gradient-silver-cyan">Anh Tran</h1>
                 <p class="subtitle">Competitive Programmer | Informatics Specialist</p>
                 <div class="social-links">
