--- a/index.html
+++ b/index.html
@@ -375,29 +375,9 @@
         .hero-avatar::after {
             content: '';
             position: absolute;
-            inset: -12px;
-            /* Larger ring */
-            border-radius: 50%;
-            border: 2px dashed rgba(255, 0, 85, 0.4);
-            /* Dashed tech look */
-            /* Mask center so it's just a ring */
-            -webkit-mask-image: radial-gradient(transparent 65%, black 66%);
-            mask-image: radial-gradient(transparent 65%, black 66%);
-            z-index: -2;
-            animation: spin 12s linear infinite reverse;
-            opacity: 0.8;
-            transition: animation-duration 0.5s ease, border-color 0.5s ease;
-        }
-
-        /* Adjust for masked ring not showing border correctly with mask? 
-           Actually, border on pseudo-element works, but mask hides inside.
-           Let's use a Conic Gradient for the second ring too, distinct style. */
-        .hero-avatar::after {
-            content: '';
-            position: absolute;
             inset: -10px;
             border-radius: 50%;
-            /* Tech segments: Red -> Transparent -> Red */
+            /* Tech segments: Red -> Transparent -> Red (Cleaner, no dashed border) */
             background: conic-gradient(from 180deg, transparent 0%, rgba(255, 0, 85, 0.8) 10%, transparent 20%, transparent 50%, rgba(255, 0, 85, 0.8) 60%, transparent 70%);
             z-index: -2;
             animation: spin 15s linear infinite reverse;
