--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
             left: 0;
             opacity: 0;
             transition: opacity 1.2s cubic-bezier(0.34, 1.56, 0.64, 1);
+            will-change: opacity;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -349,6 +350,7 @@
             box-shadow: 0 0 50px rgba(255, 0, 85, 0.4);
             transition: transform 0.5s cubic-bezier(0.34, 1.56, 0.64, 1), box-shadow 0.5s ease;
             animation: float 6s ease-in-out infinite;
+            will-change: transform, box-shadow;
         }
 
         /* Interaction */
@@ -384,14 +386,14 @@
         }
 
         .hero-avatar:hover::before {
-            animation-duration: 2s;
-            /* Super speed */
+            /* Smooth transition: removed jerky animation-duration change */
+            box-shadow: 0 0 40px rgba(255, 0, 85, 0.8);
         }
 
         .hero-avatar:hover::after {
-            animation-duration: 4s;
-            /* Super speed reverse */
+            /* Smooth transition: removed jerky animation-duration change */
             opacity: 1;
+            box-shadow: inset 0 0 20px rgba(255, 0, 85, 0.6);
         }
 
         /* Ensure the image sits on top */
@@ -2125,6 +2127,48 @@
 
         // Initialize
         showSlide(0);
+
+        /* --- Swipe Navigation Logic --- */
+        let touchStartX = 0;
+        let touchStartY = 0;
+        let touchEndX = 0;
+        let touchEndY = 0;
+        const minSwipeDistance = 75; // Moderate sensitivity (pixels)
+        const maxVerticalScroll = 30; // Ignore if user is scrolling page vertically
+
+        document.addEventListener('touchstart', function (e) {
+            touchStartX = e.changedTouches[0].screenX;
+            touchStartY = e.changedTouches[0].screenY;
+        }, { passive: true });
+
+        document.addEventListener('touchmove', function (e) {
+            // Optional: Prevent default if horizontal swipe is detected? 
+            // Better to stay passive for performance unless necessary.
+        }, { passive: true });
+
+        document.addEventListener('touchend', function (e) {
+            touchEndX = e.changedTouches[0].screenX;
+            touchEndY = e.changedTouches[0].screenY;
+            handleSwipe();
+        }, { passive: true });
+
+        function handleSwipe() {
+            const xDiff = touchEndX - touchStartX;
+            const yDiff = touchEndY - touchStartY;
+
+            // Check if vertical movement is small enough to consider this a horizontal swipe
+            if (Math.abs(yDiff) < maxVerticalScroll) {
+                if (Math.abs(xDiff) > minSwipeDistance) {
+                    if (xDiff < 0) {
+                        // Swipe Left -> Next Slide
+                        changeSlide(1);
+                    } else {
+                        // Swipe Right -> Prev Slide
+                        changeSlide(-1);
+                    }
+                }
+            }
+        }
     </script>
 
     <!-- Particles.js -->
