--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nium Portfolio</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://nium-portfolio.vercel.app/">
@@ -346,54 +347,46 @@
             z-index: 10;
             padding: 5px;
             background: rgba(0, 0, 0, 0.5);
-            /* Pulse Glow */
-            box-shadow: 0 0 50px rgba(255, 0, 85, 0.4);
+            /* Pulse Glow - Reduced Intensity */
+            box-shadow: 0 0 30px rgba(255, 0, 85, 0.2);
             transition: transform 0.5s cubic-bezier(0.34, 1.56, 0.64, 1), box-shadow 0.5s ease;
-            animation: float 6s ease-in-out infinite;
             will-change: transform, box-shadow;
         }
 
         /* Interaction */
+        /* Interaction */
         .hero-avatar:hover {
-            transform: scale(1.1) rotate(5deg);
-            box-shadow: 0 0 80px rgba(255, 0, 85, 0.8), 0 0 120px rgba(255, 0, 85, 0.4);
+            /* Stationary Glow Effect */
+            box-shadow: 0 0 50px rgba(255, 0, 85, 0.4);
+            transform: scale(1.02);
+            /* Very subtle breathe */
         }
 
         /* Ring 1: The Core (Clockwise) */
-        .hero-avatar::before {
-            content: '';
+        .hero-ring-inner {
             position: absolute;
-            inset: -4px;
+            inset: -1px;
             border-radius: 50%;
             /* Crimson, Pink, White mix */
             background: conic-gradient(from 0deg, transparent 0deg, #ff0055 100deg, #ffffff 180deg, #ff0055 260deg, transparent 360deg);
             z-index: -1;
-            box-shadow: 0 0 20px rgba(255, 0, 85, 0.5);
+            box-shadow: 0 0 10px rgba(255, 0, 85, 0.3);
             animation: spin 8s linear infinite;
-            transition: animation-duration 0.5s ease;
         }
 
         /* Ring 2: The Containment Field (Counter-Clockwise) */
-        .hero-avatar::after {
-            content: '';
+        .hero-ring-outer {
             position: absolute;
-            inset: -10px;
+            inset: -6px;
             border-radius: 50%;
             /* Tech segments: Red -> Transparent -> Red (Cleaner, no dashed border) */
-            background: conic-gradient(from 180deg, transparent 0%, rgba(255, 0, 85, 0.8) 10%, transparent 20%, transparent 50%, rgba(255, 0, 85, 0.8) 60%, transparent 70%);
+            background: conic-gradient(from 180deg, transparent 0%, rgba(255, 0, 85, 0.4) 10%, transparent 20%, transparent 50%, rgba(255, 0, 85, 0.4) 60%, transparent 70%);
             z-index: -2;
             animation: spin 15s linear infinite reverse;
         }
 
-        .hero-avatar:hover::before {
-            /* Smooth transition: removed jerky animation-duration change */
-            box-shadow: 0 0 40px rgba(255, 0, 85, 0.8);
-        }
-
-        .hero-avatar:hover::after {
-            /* Smooth transition: removed jerky animation-duration change */
+        .hero-avatar:hover .hero-ring-outer {
             opacity: 1;
-            box-shadow: inset 0 0 20px rgba(255, 0, 85, 0.6);
         }
 
         /* Ensure the image sits on top */
@@ -463,8 +456,9 @@
         }
 
         .social-btn:hover {
-            transform: translateY(-12px) scale(1.15) rotate(5deg);
-            box-shadow: 0 25px 50px rgba(0, 200, 255, 0.3), 0 8px 20px rgba(0, 0, 0, 0.5);
+            transform: translateY(-8px);
+            /* Elegant Lift only */
+            box-shadow: 0 20px 40px rgba(0, 200, 255, 0.3), 0 8px 20px rgba(0, 0, 0, 0.5);
             background: rgba(0, 153, 204, 0.2);
             color: #ffffff;
             border-color: #00AAFF;
@@ -692,7 +686,8 @@
         }
 
         .skill-card:hover {
-            transform: translateY(-18px) scale(1.05);
+            transform: translateY(-15px);
+            /* Pure Lift */
             box-shadow: 0 20px 50px rgba(0, 200, 255, 0.3), 0 10px 25px rgba(0, 0, 0, 0.5);
             border-color: #00AAFF;
             background: rgba(58, 58, 74, 0.6);
@@ -711,7 +706,8 @@
         }
 
         .skill-card:hover .skill-icon {
-            transform: scale(1.3) rotate(10deg);
+            transform: translateY(-5px);
+            /* Slight icon lift instead of rotate */
             filter: drop-shadow(0 8px 16px rgba(0, 153, 204, 0.3)) drop-shadow(0 4px 8px rgba(0, 0, 0, 0.4));
         }
 
@@ -1217,21 +1213,21 @@
         }
 
         .dot {
-            width: 14px;
-            height: 14px;
+            width: 8px;
+            height: 8px;
             border-radius: 50%;
-            background: rgba(255, 255, 255, 0.5);
+            background: rgba(255, 255, 255, 0.2);
             cursor: pointer;
             transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
             border: 2px solid transparent;
         }
 
         .dot.active {
-            background: #0099cc;
-            width: 35px;
+            background: rgba(0, 153, 204, 0.8);
+            width: 25px;
             border-radius: 10px;
-            animation: dotPulse 1.5s ease infinite;
-            box-shadow: 0 0 15px rgba(0, 153, 204, 0.5);
+            animation: dotPulse 2s ease infinite;
+            box-shadow: 0 0 10px rgba(0, 153, 204, 0.3);
         }
 
         .dot:hover {
@@ -1906,6 +1902,8 @@
         <div class="slide slide-hero active">
             <div class="content">
                 <div class="hero-avatar">
+                    <div class="hero-ring hero-ring-inner"></div>
+                    <div class="hero-ring hero-ring-outer"></div>
                     <img src="redgirl.jpg" alt="Profile">
                 </div>
                 <h1 class="text-gradient-silver-cyan">Anh Tran</h1>
@@ -2169,6 +2167,61 @@
                 }
             }
         }
+
+        /* --- Smooth Avatar Acceleration (WAAPI) --- */
+        const avatar = document.querySelector('.hero-avatar');
+        const ringInner = document.querySelector('.hero-ring-inner');
+        const ringOuter = document.querySelector('.hero-ring-outer');
+
+        // Speed multipliers: 1x (base) -> 4x (fast)
+        // Base Inner: 8s. Fast Inner: 8/4 = 2s.
+        // Base Outer: 15s. Fast Outer: 15/3.75 = 4s.
+        const INNER_BASE_SPEED = 1;
+        const INNER_FAST_SPEED = 4;
+        const OUTER_BASE_SPEED = 1;
+        const OUTER_FAST_SPEED = 3.75;
+
+        let rampAnimationId = null;
+
+        function animatePlaybackRate(animations, targetSpeed, duration = 400) {
+            // Helper to smoothly ramp playbackRate
+            animations.forEach(anim => {
+                const startSpeed = anim.playbackRate;
+                const startTime = performance.now();
+
+                function update(currentTime) {
+                    const elapsed = currentTime - startTime;
+                    const progress = Math.min(elapsed / duration, 1);
+
+                    // Ease-Out Cubic: Starts fast, decelerates to end
+                    const ease = 1 - Math.pow(1 - progress, 3);
+
+                    anim.playbackRate = startSpeed + (targetSpeed - startSpeed) * ease;
+
+                    if (progress < 1) {
+                        requestAnimationFrame(update);
+                    }
+                }
+                requestAnimationFrame(update);
+            });
+        }
+
+        avatar.addEventListener('mouseenter', () => {
+            // Find running animations
+            const innerAnims = ringInner.getAnimations();
+            const outerAnims = ringOuter.getAnimations();
+
+            animatePlaybackRate(innerAnims, INNER_FAST_SPEED);
+            animatePlaybackRate(outerAnims, OUTER_FAST_SPEED);
+        });
+
+        avatar.addEventListener('mouseleave', () => {
+            const innerAnims = ringInner.getAnimations();
+            const outerAnims = ringOuter.getAnimations();
+
+            animatePlaybackRate(innerAnims, INNER_BASE_SPEED);
+            animatePlaybackRate(outerAnims, OUTER_BASE_SPEED);
+        });
     </script>
 
     <!-- Particles.js -->
@@ -2177,7 +2230,7 @@
         particlesJS("particles-js", {
             "particles": {
                 "number": {
-                    "value": 80,
+                    "value": 40,
                     "density": {
                         "enable": true,
                         "value_area": 800
@@ -2197,12 +2250,12 @@
                     }
                 },
                 "opacity": {
-                    "value": 0.2,
-                    "random": false,
+                    "value": 0.15,
+                    "random": true,
                     "anim": {
-                        "enable": false,
-                        "speed": 1,
-                        "opacity_min": 0.1,
+                        "enable": true,
+                        "speed": 0.2,
+                        "opacity_min": 0.05,
                         "sync": false
                     }
                 },
@@ -2210,8 +2263,8 @@
                     "value": 3,
                     "random": true,
                     "anim": {
-                        "enable": false,
-                        "speed": 40,
+                        "enable": true,
+                        "speed": 1,
                         "size_min": 0.1,
                         "sync": false
                     }
@@ -2220,12 +2273,12 @@
                     "enable": true,
                     "distance": 150,
                     "color": "#ffffff",
-                    "opacity": 0.15,
+                    "opacity": 0.1,
                     "width": 1
                 },
                 "move": {
                     "enable": true,
-                    "speed": 2,
+                    "speed": 0.4,
                     "direction": "none",
                     "random": true,
                     "straight": false,
@@ -2255,7 +2308,7 @@
                     "grab": {
                         "distance": 140,
                         "line_linked": {
-                            "opacity": 1
+                            "opacity": 0.8
                         }
                     },
                     "bubble": {
